Prevents overlapping of descriptions with tabs #3233
Former-commit-id: f68b012e08b1ee19523bf558f3a8c9ffca6bc6af

--- a/sites/all/themes/scratchpads/css/global.css
+++ b/sites/all/themes/scratchpads/css/global.css
@@ -560,7 +560,6 @@ h1.site-name,h2.site-name {
 /* Species pages*/
 .logged-in #block-views-species-spm-block {
   position: relative;
-  top: -30px;
 }
 
 .block-species-biblio-block,.block-species-spm-block {
